--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <h1 class = "text-5xl text-center mt-6">Welcome to your <span class = "font-semibold text-violet-900">Baap er Bank</span>!!!</h1>
+    <header>
+        <h1 class = "text-5xl text-center mt-6">Welcome to your <span class = "font-semibold text-violet-900">Baap er Bank</span>!!!</h1>
+    </header>
+    <main>
+        <section class="bg-blue-200 w-9/12  mx-auto mt-12 p-8">
+            <h3 class="text-3xl mb-4 font-semibold">Plaese login</h3>
+            <div>
+                <input class = "w-9/12 p-2 block mb-2" type="mail" placeholder="Enter Your Valid Mail iD">
+                <input class = "w-9/12 p-2 block mb-2" type="password" placeholder="Enter Password">
+                <button class="bg-amber-600 px-5 py-1 text-white font-medium rounded-lg hover:bg-amber-800">Submit</button>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
