--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
         <section class="bg-blue-200 w-9/12  mx-auto mt-12 p-8">
             <h3 class="text-3xl mb-4 font-semibold">Plaese login</h3>
             <div>
-                <input class = "w-9/12 p-2 block mb-2" type="mail" placeholder="Enter Your Valid Mail iD">
-                <input class = "w-9/12 p-2 block mb-2" type="password" placeholder="Enter Password">
-                <button class="bg-amber-600 px-5 py-1 text-white font-medium rounded-lg hover:bg-amber-800">Submit</button>
+                <input id="user-email" class = "w-9/12 p-2 block mb-2" type="mail" placeholder="Enter Your Valid Mail iD">
+                <input id ="user-password" class = "w-9/12 p-2 block mb-2" type="password" placeholder="Enter Password">
+                <button id="submit-btn" class="bg-amber-600 px-5 py-1 text-white font-medium rounded-lg hover:bg-amber-800">Submit</button>
             </div>
         </section>
     </main>
+
+    <script src="javaScript/login.js"></script>
 </body>
 </html>
