--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <main>
         <section class="bg-blue-200 w-9/12  mx-auto mt-12 p-8">
-            <h3 class="text-3xl mb-4 font-semibold">Plaese login</h3>
+            <h3 class="text-3xl mb-4 font-semibold">Plese login</h3>
             <div>
                 <input id="user-email" class = "w-9/12 p-2 block mb-2" type="mail" placeholder="Enter Your Valid Mail iD">
                 <input id ="user-password" class = "w-9/12 p-2 block mb-2" type="password" placeholder="Enter Password">
